addig login styles and images

--- a/src/app/pages/login/login/login.component.html
+++ b/src/app/pages/login/login/login.component.html
@@ -1,2 +1,30 @@
+<mat-grid-list cols="4">
+    <mat-card class="example-card">
+        <mat-card-subtitle>Eres parte de nuestra empreza o quieres trabajar con nosotros?</mat-card-subtitle>
+        <mat-card-title>Inicia sesión!</mat-card-title>
+        <mat-card-content>
 
-<p>login works!</p>
+            <img src="./assets/imgs/group.png" alt="group image">
+           
+            <mat-form-field appearance="outline">
+                <mat-label>Username</mat-label>
+                <input matInput placeholder="Placeholder">
+                <mat-hint>user1</mat-hint>
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Password</mat-label>
+                <input matInput placeholder="Placeholder">
+                
+              </mat-form-field>
+        </mat-card-content>
+        <mat-divider inset></mat-divider>
+        <mat-card-actions>
+            <button mat-button>LIKE</button>
+            <button mat-button>SHARE</button>
+        </mat-card-actions>
+        <mat-card-footer>
+            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        </mat-card-footer>
+    </mat-card>
+    
+</mat-grid-list>
