--- a/src/app/pages/login/login/login.component.html
+++ b/src/app/pages/login/login/login.component.html
@@ -1,30 +1,47 @@
-<mat-grid-list cols="4">
+<div class="body">
     <mat-card class="example-card">
-        <mat-card-subtitle>Eres parte de nuestra empreza o quieres trabajar con nosotros?</mat-card-subtitle>
-        <mat-card-title>Inicia sesión!</mat-card-title>
+        <mat-card-header>
+            <mat-card-title>Inicia sesión!</mat-card-title>
+            <mat-card-subtitle>Eres parte de nuestra empreza o quieres trabajar con nosotros?</mat-card-subtitle>
+        </mat-card-header>
         <mat-card-content>
 
-            <img src="./assets/imgs/group.png" alt="group image">
+            <img class="card_img" src="./assets/imgs/group.png" alt="group image" height="150px">
+
+            <form [formGroup]="loginFormGroup">
+                <mat-form-field appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input [class.is-invalid] = "userEmail.invalid && userEmail.touched"
+                    matInput placeholder="Placeholder" type="email" formControlName="userEmail">
+                    <mat-hint>algo@algo.com</mat-hint>
+                </mat-form-field>
+                <div *ngIf="(userEmail.invalid && userEmail.touched) || userEmail.dirty">
+                    <small *ngIf="userEmail.errors?.required" class="text-danger">Email es un campo requerido</small>
+                    <!--question mark(?) is a safe navigation operator-->
+                    <small *ngIf="userEmail.errors?.pattern" class="text-danger">Porfavor Ingresa un correo valido</small>
+                  </div>
+             
+                <mat-form-field appearance="outline">
+                    <mat-label>Password</mat-label>
+                    <input matInput [class.is-invalid] = "userPassword.invalid && userPassword.touched"
+                     placeholder="Placeholder" type="password" autocomplete="off" formControlName="userPassword">
+                </mat-form-field>
+                <div *ngIf="(userPassword.invalid && userPassword.touched) || userPassword.dirty">
+                    <small *ngIf="userPassword.errors?.required" class="text-danger">Contraseña es un campo requerido</small>
+                    <!--question mark(?) is a safe navigation operator-->
+                    <small *ngIf="userPassword.errors?.minlength" class="text-danger">La contraseña debe ser minino de 8 caracteres</small>
+                  </div>
+            </form>
+
            
-            <mat-form-field appearance="outline">
-                <mat-label>Username</mat-label>
-                <input matInput placeholder="Placeholder">
-                <mat-hint>user1</mat-hint>
-              </mat-form-field>
-              <mat-form-field appearance="outline">
-                <mat-label>Password</mat-label>
-                <input matInput placeholder="Placeholder">
-                
-              </mat-form-field>
         </mat-card-content>
         <mat-divider inset></mat-divider>
         <mat-card-actions>
-            <button mat-button>LIKE</button>
-            <button mat-button>SHARE</button>
+            <button mat-stroked-button color="primary" [disabled]="!loginFormGroup.valid" (click)="login()">Iniciar Sesión</button>
         </mat-card-actions>
-        <mat-card-footer>
-            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        <mat-card-footer *ngIf="loading">
+            <mat-progress-bar  mode="indeterminate"></mat-progress-bar>
         </mat-card-footer>
     </mat-card>
-    
-</mat-grid-list>
+
+</div>
