--- a/src/app/pages/login/login/login.component.scss
+++ b/src/app/pages/login/login/login.component.scss
@@ -3,22 +3,35 @@
   max-width: 400px;
 }
 
-mat-grid-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
+
 mat-form-field{
+
     width: 75%;
 }
 
-mat-card-action{
+mat-card-content{
+    margin-top: 20px;
+ text-align: center;
+}
+
+mat-card-actions{
+    text-align: center;
     button{
-        padding: auto;
-        margin: auto;
+        width: 70%;
     }
 }
 
-body{
+.card_img{
+    border-radius: 5px;
     background-color: #eee;
+    padding: 5;
+    margin-bottom: 10px;
+}
+.body{
+    height: 100%;
+    background-color: #eee;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-items: center;
 }
