ading header and footer to home page

--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,1 +1,7 @@
+<app-toolbar></app-toolbar>
+
 <p>home works!</p>
+<div>{{user|json}}</div>
+<button color="danger" (click)="logautUser()">Cerrar sesión</button>
+
+<app-footer></app-footer>
