--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,7 +1,45 @@
-<app-toolbar></app-toolbar>
+<app-toolbar [user]="user"></app-toolbar>
+<div class="container" fxLayout.gt-sm="row" fxLayout.lt-md="column">
+    <div fxFlex.gt-sm="20%" fxFlex.lt-md="20%" fxLayoutAlign="center center" class="right">
+        <mat-card class="example-card">
 
-<p>home works!</p>
-<div>{{user|json}}</div>
-<button color="danger" (click)="logautUser()">Cerrar sesión</button>
+            <mat-card-content class="tripulante" fxLayout="column" fxLayout.lt-md="row" fxFlex.sm="colum">
+                <div *ngIf="user" class="text">
+                    <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
+                    <p>{{user.email}}</p>
+                </div>
+                <img class="tripulante" src="./assets/imgs/man.png" width="150px" height="150px">
+                <button mat-stroked-button color="warn" class="example-icon" (click)="logoutUser()"
+                    aria-label="Example icon-button with share icon">
+                    <span>Salir</span>
+                    <mat-icon color="warn">exit_to_app</mat-icon>
+                </button>
+            </mat-card-content>
+        </mat-card>
+    </div>
+    <div fxFlex.gt-sm="80%" fxFlex.lt-md="80%" fxLayoutAlign="center center" class="left">
+        <mat-card *ngIf="user" class="example-card">
 
+            <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
+           
+            <mat-card-content>
+                
+
+
+                <div *ngIf="user.roles[0]=='candidate'">
+                    <p>Usted tiene asignadas las siguientes pruebas. {{user.roles[0]}}</p>
+
+
+                </div>
+
+                <div *ngIf="user.roles[0]='recruiter'">
+                    <app-home-recuiter></app-home-recuiter>
+
+
+                </div>
+            </mat-card-content>
+
+        </mat-card>
+    </div>
+</div>
 <app-footer></app-footer>
