--- a/src/app/pages/recruiter/create-user/create-user.component.html
+++ b/src/app/pages/recruiter/create-user/create-user.component.html
@@ -1,7 +1,12 @@
-<mat-toolbar color="primary">
-    <span>Menu para agregar un usuario</span>
-</mat-toolbar>
+<mat-toolbar fxLayout="row" color="primary">
+    <button  mat-icon-button (click)="backClicked()" class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>keyboard_backspace</mat-icon>
+    </button>
+    <span >Crear Usuarios</span>
+    <span class="example-spacer"></span>
+  </mat-toolbar>
 <div class="container" fxLayout.gt-sm="row" fxLayout.lt-md="column">
+   
     <div fxFlex.gt-sm="20%" fxFlex.lt-md="20%" fxLayoutAlign="center center" class="right">
         <mat-card class="example-card">
 
@@ -58,7 +63,7 @@
                         <!--question mark(?) is a safe navigation operator-->
                         <small *ngIf="password.errors?.minlength" class="text-danger">La contraseña debe ser minino de 8 caracteres</small>
                       </div>
-                    <button mat-raised-button  [disabled]="!userForm.valid" (click)="createCandidate()" color="primary">Crear Candidato</button>
+                    <button class="button" mat-raised-button  [disabled]="!userForm.valid" (click)="createCandidate()" color="primary">Crear Candidato</button>
                 </form>
             </mat-card-content>
 
