adding test view

--- a/src/app/pages/home/home-recuiter/home-recuiter.component.html
+++ b/src/app/pages/home/home-recuiter/home-recuiter.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="column">
     <div class="row">
-      <button class="column" mat-raised-button color="accent" [routerLink]="['/recruiter/add-user']"
+      <button class="column" mat-raised-button color="accent" [routerLink]="['/recruiter/test']"
         aria-label="Example icon button with a delete icon">
         <mat-icon>edit</mat-icon>
         Revisar Pruebas Tecnicas
