--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -28,7 +28,7 @@
 
                 <div *ngIf="user.rol=='candidate'">
                     <p>Usted tiene asignadas las siguientes pruebas. {{user.roles[0]}}</p>
-
+                    <app-home-candidate></app-home-candidate>
 
                 </div>
 
