--- a/src/app/pages/recruiter/create-user/create-user.component.html
+++ b/src/app/pages/recruiter/create-user/create-user.component.html
@@ -3,7 +3,7 @@
         aria-label="Example icon-button with menu icon">
         <mat-icon>keyboard_backspace</mat-icon>
     </button>
-    <span>Crear Usuarios</span>
+    <span>Prueba </span>
     <span class="example-spacer"></span>
 </mat-toolbar>
 <div class="container" fxLayout.gt-sm="row" fxLayout.lt-md="column">
