--- a/src/app/pages/candidate/take-test/take-test.component.html
+++ b/src/app/pages/candidate/take-test/take-test.component.html
@@ -3,13 +3,12 @@
         aria-label="Example icon-button with menu icon">
         <mat-icon>keyboard_backspace</mat-icon>
     </button>
-    <span>Crear Usuarios</span>
+    <span>Examen</span>
     <span class="example-spacer"></span>
 </mat-toolbar>
 <div class="container" fxLayout.gt-sm="row" fxLayout.lt-md="column">
     <div fxFlex.gt-sm="20%" fxFlex.lt-md="20%" fxLayoutAlign="center center" class="right">
-        <mat-card class="example-card">
-
+        <mat-card class="estilo example-card">
             <mat-card-content class="tripulante" fxLayout="column" fxLayout.lt-md="row" fxFlex.sm="colum">
                 <div *ngIf="user" class="text">
                     <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
@@ -24,15 +23,43 @@
             </mat-card-content>
         </mat-card>
     </div>
-    <div fxFlex.gt-sm="80%" fxFlex.lt-md="80%" fxLayoutAlign="center center" class="left">
-        <mat-card *ngIf="user" class="example-card">
+    <div fxLayoutAlign="center center" class="left">
+        <div *ngIf="user" class="estilo example-card">
 
-            <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
-           
-            <mat-card-content>
-                
-            </mat-card-content>
+            <mat-card-title *ngIf="test">{{test.name}}</mat-card-title>
 
-        </mat-card>
+
+            <mat-list *ngIf="test">
+                <mat-list-item *ngFor="let question of test.questions; let i = index">
+                    <div matLine>
+                        <div style="margin-bottom: 5px; margin-right: 20px;">
+                            <mat-card-title>{{question.name}}</mat-card-title>
+                            <mat-card-subtitle *ngIf="question.type=='simple'">Selecciona una sola respuesta
+                            </mat-card-subtitle>
+                            <mat-card-subtitle *ngIf="question.type=='multiple'">Selección multiple
+                            </mat-card-subtitle>
+                            <mat-card-content>
+                                <div *ngIf="question">
+                                    <div *ngIf="question.anwsers">
+                                        <mat-list>
+                                            <mat-list-item *ngFor="let anwser of question.anwsers">
+
+                                                <div matLine>{{anwser.name}} </div>
+                                            </mat-list-item>
+                                        </mat-list>
+
+                                    </div>
+
+                                </div>
+
+                            </mat-card-content>
+                        </div>
+                    </div>
+                </mat-list-item>
+                <mat-divider></mat-divider>
+            </mat-list>
+
+
+        </div>
     </div>
 </div>
