--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,4 +1,4 @@
-<app-toolbar [user]="user"></app-toolbar>
+<app-toolbar [user]="user" [title]='title'></app-toolbar>
 <div class="container" fxLayout.gt-sm="row" fxLayout.lt-md="column">
     <div fxFlex.gt-sm="20%" fxFlex.lt-md="20%" fxLayoutAlign="center center" class="right">
         <mat-card class="example-card">
