--- a/src/app/pages/candidate/take-test/take-test.component.scss
+++ b/src/app/pages/candidate/take-test/take-test.component.scss
@@ -40,6 +40,18 @@
   text-align: center;
 }
 
-mat-list-item {
+.list-item {
   margin: 15px;
+}
+
+
+.example-radio-group {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+  align-items: flex-start;
+}
+
+.example-radio-button {
+  margin: 5px;
 }
