--- a/src/app/pages/home/home-candidate/home-candidate.component.scss
+++ b/src/app/pages/home/home-candidate/home-candidate.component.scss
@@ -14,3 +14,12 @@ table {
   text-align: center;
 
 }
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
