--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,6 +1,8 @@
 <app-toolbar [user]="user" [title]='title'></app-toolbar>
-<div class="container" fxLayout.gt-sm="row" fxLayout.lt-md="column">
-    <div fxFlex.gt-sm="20%" fxFlex.lt-md="20%" fxLayoutAlign="center center" class="right">
+
+<div *ngIf="!loading" class="container" fxLayout.gt-sm="row" fxLayout.lt-md="column">
+   
+    <div  fxFlex.gt-sm="20%" fxFlex.lt-md="20%" fxLayoutAlign="center center" class="right">
         <mat-card class="example-card">
 
             <mat-card-content class="tripulante" fxLayout="column" fxLayout.lt-md="row" fxFlex.sm="colum">
@@ -8,7 +10,7 @@
                     <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
                     <p>{{user.email}}</p>
                 </div>
-                <img class="tripulante" src="./assets/imgs/man.png" width="150px" height="150px">
+                <img class="tripulante" alt="foto-persona" src="./assets/imgs/man.png" width="150px" height="150px">
                 <button mat-stroked-button color="warn" class="example-icon" (click)="logoutUser()"
                     aria-label="Example icon-button with share icon">
                     <span>Salir</span>
